--- a/css/splash.css
+++ b/css/splash.css
@@ -1,3 +1,12 @@
+/*--------------------------------------
+		FS3D/Prepar3d Launcher
+		----------------------
+
+	Author: 	FS3D
+	Version:	0.5
+	Year:		2022
+
+--------------------------------------*/
 html, body{
 	width:560px;
 	height:500px;
