--- a/css/main.css
+++ b/css/main.css
@@ -9,13 +9,34 @@
 --------------------------------------*/
 html, body{
 	font-family:arial;
+	width:100%;
+	height:100%;
 	margin:0;
 	padding:0;
-	background:#1f1f1f;
-	background:url('../images/background.png');
 	color:white;
-	background-size:cover;
 	user-select:none;
+	overflow:hidden;
+	background:black;
+}
+#background_video{
+	position:relative;
+	top:0;
+	left:0;
+	margin:0;
+	padding:0;
+	z-index:1;
+	width:560px;
+	height:800px;
+}
+#content{
+	position:absolute;
+	margin:0;
+	padding:0;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	z-index:2;
 }
 a:link, a:visited, a:active, a:hover{
 	text-decoration:none;
@@ -68,7 +89,7 @@ select:disabled{
 	float:left;
 	margin-top:15px;
 	width:100%;
-	min-height:100px;
+	margin-bottom:10px;
 	background:rgba(10,10,10,0.7);
 	clear:both;
 }
@@ -114,9 +135,9 @@ select:disabled{
 	position:absolute;
 	bottom:0px;
 	width:100%;
-	margin-top:10px;
 	height:100px;
 	background:rgba(40,40,40,1);
+	z-index:2;
 }
 
 #launch_button{
