--- a/css/splash.css
+++ b/css/splash.css
@@ -15,6 +15,16 @@ html, body{
 	background-size:cover;
 	user-select:none;
 }
+#splash_video{
+	position:relative;
+	top:0;
+	left:0;
+	margin:0;
+	padding:0;
+	z-index:1;
+	width:560px;
+	height:500px;
+}
 #splash_loading{
 	width:200px;
 	height:200px;
@@ -23,6 +33,7 @@ html, body{
 	left:180px;
 	background:url('../images/pulse.gif');
 	background-size:cover;
+	z-index:2;
 }
 #splash_message{
 	color:white;
@@ -31,4 +42,5 @@ html, body{
 	top:400px;
 	width:100%;
 	text-align:center;
+	z-index:2;
 }
